package com.bibliotheque.enums;

public enum StatutEmprunt {
    DEMANDE,
    EN_COURS,
    RETOURNE,
    ANNULE
}