package com.bibliotheque.enums;

public enum StatutExemplaire {
    DISPONIBLE,
    EMPRUNTE,
    RESERVE,
    PERDU
}