package com.bibliotheque.enums;

public enum StatutReservation {
    EN_ATTENTE,
    PRETE_A_RECUPERER,
    EXPIREE,
    RECUPEREE,
    ANNULEE
}